# ecu_studio_suite

./: .gitignore  .gitmodules  AGENT_MPPS_REVERSE_QT6.md  CMakeLists.txt  README.md  build.sh  vcpkg.json
.github/workflows/: ci.yml  release.yml  windows.yml
apps/ecu-studio/: CMakeLists.txt  mcp_config_example.json
apps/ecu-studio/i18n/: ecu_studio_en.ts  ecu_studio_fr.ts
apps/ecu-studio/resources/: ecu-studio.desktop
apps/ecu-studio/src/: byte_span.h  main.cpp  main_window.cpp  main_window.h  nav_icons.cpp  nav_icons.h  report_action.cpp  rom_document.cpp  rom_document.h  sidebar_nav.cpp  sidebar_nav.h  splash_screen.cpp  splash_screen.h  update_dialog.cpp  update_dialog.h  updater.cpp  updater.h  welcome_screen.cpp  welcome_screen.h
apps/ecu-studio/src/hub/: hub_launcher_panel.cpp  hub_launcher_panel.h  maturity_badge.cpp  maturity_badge.h  sub_program_registry.cpp  sub_program_registry.h  tool_downloader.cpp  tool_downloader.h  verify_on_bus_dialog.cpp  verify_on_bus_dialog.h
apps/ecu-studio/src/obd/: elm327.cpp  elm327.h
apps/ecu-studio/src/panels/: a2l_panel.cpp  a2l_panel.h  automods_panel.cpp  automods_panel.h  automods_panel_ops.cpp  can_panel.cpp  can_panel.h  checksum_panel.cpp  checksum_panel.h  compare_panel.cpp  compare_panel.h  damos_editor_panel.cpp  damos_editor_panel.h  damos_editor_panel_automods.cpp  git_blob_utils.cpp  git_blob_utils.h  git_panel.cpp  git_panel.h  hex_view.cpp  hex_view.h  hex_view_panel.cpp  hex_view_panel.h  map3d_panel.cpp  map3d_panel.h  map3d_view.cpp  map3d_view.h  map_editor_panel.cpp  map_editor_panel.h  map_editor_panel_baseline.cpp  map_editor_panel_grid.cpp  map_editor_panel_ops.cpp  map_entry.h  map_view_helpers.cpp  map_view_helpers.h  mpps_panel.cpp  mpps_panel.h  obd_panel.cpp  obd_panel.h  open_damos_relocator.cpp  open_damos_relocator.h  (+9 more)
docs/: AUDIT_FIABILITE.md  COMPARATIF_WINOLS.md  GAP_ANALYSIS.md  MCP.md  PLAN_ACTION.md  demo.html  index.html  mpps-checksums.md  mpps-decryption.md  mpps-reverse.md  suite.css  suite.js
docs/ecu-research/: README.md  ecu_catalog_proposed.json  edc16.md  edc17.md  me7.md  med17.md
docs/opendamos/: CONVENTION_DAMOS_VERS_OPENDAMOS.md  IMMO_OFF.md  OPENDAMOS_STANDARD.md
libs/can-core/: CMakeLists.txt
libs/ecu-core/: CMakeLists.txt
libs/ecu-core/include/ecu/: A2lParser.hpp  ChecksumEngine.hpp  DamosImport.hpp  EcuCatalog.hpp  Edc17Checksum.hpp  GitManager.hpp  MapDiffer.hpp  MapFinder.hpp  Obd2.hpp  OlsImport.hpp  OpenDamos.hpp  OpenDamosA2lExport.hpp  OpenDamosRecipes.hpp  ProjectManager.hpp  ReportGenerator.hpp  RomPatcher.hpp  VehicleTemplates.hpp  WinolsParser.hpp
libs/ecu-core/src/: A2lParser.cpp  ChecksumEngine.cpp  DamosImport.cpp  EcuCatalog.cpp  Edc17Checksum.cpp  GitManager.cpp  MapDiffer.cpp  MapFinder.cpp  Obd2.cpp  OlsImport.cpp  OpenDamos.cpp  OpenDamosA2lExport.cpp  OpenDamosRecipes.cpp  OpenDamosRelocate.cpp  OpenDamosSerialize.cpp  ProjectManager.cpp  ReportGenerator.cpp  RomPatcher.cpp  VehicleTemplates.cpp  WinolsParser.cpp
libs/ecu-mcp/: CMakeLists.txt
libs/ecu-mcp/include/ecu/mcp/: McpServer.hpp  Tools.hpp
libs/ecu-mcp/src/: McpServer.cpp  Tools.cpp  tools_common.cpp  tools_damos.cpp  tools_internal.h  tools_recipes.cpp  tools_rom.cpp
libs/mpps/: CMakeLists.txt
libs/mpps/include/mpps/: MppsDevice.hpp
libs/mpps/src/: MppsDevice.cpp  MppsDevice_libusb.cpp  MppsDevice_sim.cpp
libs/shared/: CMakeLists.txt
libs/shared/include/ecu_studio/: palette.hpp
libs/shared/src/: palette.cpp
ressources/: index.json  open_damos.schema.json
ressources/000014a9_212_010_001/: open_damos.json
ressources/000014a9_222_010_001/: open_damos.json
ressources/00003744_012_010_001/: open_damos.json
ressources/00003744_022_010_001/: open_damos.json
ressources/1551uf5_lib/: open_damos.json
ressources/715c360b/: open_damos.json
ressources/715c400b/: open_damos.json
ressources/715c450b/: open_damos.json
ressources/8bc2540b/: open_damos.json
ressources/8bc2565b/: open_damos.json
ressources/8bc2585b/: open_damos.json
ressources/8bc2590b/: open_damos.json
ressources/8bc2595b/: open_damos.json
ressources/8bc2596b/: open_damos.json
ressources/8bc259ab/: open_damos.json
ressources/8bc259bb/: open_damos.json
ressources/8bc259cb/: open_damos.json
ressources/8hp51/: open_damos.json
ressources/a8ax_170320_083851_m_7121bda90_1/: open_damos.json
ressources/a8ax_170405_085003_g_7141vaa90_1/: open_damos.json
ressources/a8ax_170406_162113_q_ajom0115_04/: open_damos.json
ressources/a8ax_170407_150630_m_7142vaa90_2/: open_damos.json
ressources/aktuell/: open_damos.json
ressources/c0c2a00ab/: open_damos.json
ressources/c1508duf0_lib/: open_damos.json
ressources/cayenne_v6t_msg/: open_damos.json
ressources/daten_20l_73ae/: open_damos.json
ressources/dme83t1_r2b22002b/: open_damos.json
ressources/dme841_r1c2900ab/: open_damos.json
ressources/dme841_r1c2900db/: open_damos.json
ressources/dme841_r1c2a008b/: open_damos.json
ressources/dme841_r1c2a009b/: open_damos.json
ressources/dme841_r1c2a113b/: open_damos.json
ressources/dme841_r1c2a114b/: open_damos.json
ressources/dme841_r1c2a117b/: open_damos.json
ressources/dme841_r1c2a118b/: open_damos.json
ressources/dme841_r1c2a119b/: open_damos.json
ressources/dme841_r1c2a131b/: open_damos.json
ressources/dme841_r1c2a132b/: open_damos.json
ressources/dme84t1_r2b22002b/: open_damos.json
ressources/dme861_r1c29004b/: open_damos.json
ressources/dme861_r1c29005b/: open_damos.json
ressources/dme861_r1c29007b/: open_damos.json
ressources/dme861_r1c29008b/: open_damos.json
scripts/: batch_opendamos.py  damos_a2l_to_opendamos.py
tests/unit/: CMakeLists.txt  test_checksum_engine.cpp  test_damos_import.cpp  test_ecu_catalog.cpp  test_edc17_checksum.cpp  test_git_manager.cpp  test_map_differ.cpp  test_map_finder.cpp  test_mcp_server.cpp  test_mpps_sim.cpp  test_obd2.cpp  test_rom_patcher.cpp  test_vehicle_templates.cpp  test_winols_parser.cpp
tools/: 60-mpps.rules
wiki/: Architecture.md  FAQ.md  Getting-Started.md  Home.md  OpenDAMOS.md  Sub-Programs.md
(+92 files in other folders)
